@@ -1,3 +1,5 @@
+20100325
+	more swizzling of libtk for later use. revised radio and check buttons.
 20100322
 	a few tweaks to Tk for later use
 20100320
